use correct vh for height calculation on mobile

--- a/packages/scandipwa/src/route/ProductPage/ProductPage.style.scss
+++ b/packages/scandipwa/src/route/ProductPage/ProductPage.style.scss
@@ -20,7 +20,7 @@
     }
 
     @include mobile {
-        height: 100%;
+        height: calc(var(--vh, 1vh) * 100);
         margin-top: -50px;
         margin-bottom: 0;
     }
